welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: not found: value c
     setCouleurBrosse(T((c+decalage)% h))
                         ^